Fix header text width on small screens

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -42,6 +42,7 @@
 
 .header .text {
     flex-basis: 70%;
+    flex-grow: 1;
     max-width: 800px;
 }
 
